ass5_12CS10006/y.output
Nonterminals useless in grammar

   identifier_list_opt
   identifier_list
   declaration_list


Terminals unused in grammar

   Struct
   Typedef
   Union
   P47


Rules useless in grammar

  202 identifier_list_opt: identifier_list
  203                    | /* empty */

  204 identifier_list: identifier
  205                | identifier_list P46 identifier

  206 declaration_list: declaration
  207                 | declaration_list declaration


State 333 conflicts: 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: identifier
    2                   | Constant
    3                   | string_literal
    4                   | P24 expression P25

    5 postfix_expression: primary_expression
    6                   | postfix_expression P22 expression P23
    7                   | postfix_expression P24 argument_expression_list P25
    8                   | postfix_expression P24 P25
    9                   | postfix_expression P28 identifier
   10                   | postfix_expression P29 identifier
   11                   | postfix_expression P30
   12                   | postfix_expression P31
   13                   | P24 type_name P25 P26 initializer_list P27
   14                   | P24 type_name P25 P26 initializer_list P46 P27

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list P46 assignment_expression

   17 unary_expression: postfix_expression
   18                 | P30 unary_expression
   19                 | P31 unary_expression
   20                 | P16 cast_expression
   21                 | P17 M cast_expression
   22                 | P18 cast_expression
   23                 | P19 cast_expression
   24                 | P20 cast_expression
   25                 | P21 cast_expression
   26                 | Sizeof unary_expression
   27                 | Sizeof P24 type_name P25

   28 cast_expression: unary_expression
   29                | P24 type_name P25 cast_expression

   30 multiplicative_expression: cast_expression
   31                          | multiplicative_expression P17 cast_expression
   32                          | multiplicative_expression P32 cast_expression
   33                          | multiplicative_expression P33 cast_expression

   34 additive_expression: multiplicative_expression
   35                    | additive_expression P18 multiplicative_expression
   36                    | additive_expression P19 multiplicative_expression

   37 shift_expression: additive_expression
   38                 | shift_expression P34 additive_expression
   39                 | shift_expression P35 additive_expression

   40 relational_expression: shift_expression
   41                      | relational_expression P36 shift_expression
   42                      | relational_expression P37 shift_expression
   43                      | relational_expression P1 shift_expression
   44                      | relational_expression P2 shift_expression

   45 equality_expression: relational_expression
   46                    | equality_expression P3 relational_expression
   47                    | equality_expression P4 relational_expression

   48 AND_expression: equality_expression
   49               | AND_expression P16 equality_expression

   50 exclusive_OR_expression: AND_expression
   51                        | exclusive_OR_expression P38 M AND_expression

   52 inclusive_OR_expression: exclusive_OR_expression
   53                        | inclusive_OR_expression P39 exclusive_OR_expression

   54 M: /* empty */

   55 N: /* empty */

   56 logical_AND_expression: inclusive_OR_expression
   57                       | logical_AND_expression P40 M inclusive_OR_expression

   58 logical_OR_expression: logical_AND_expression
   59                      | logical_OR_expression P41 M logical_AND_expression

   60 conditional_expression: logical_OR_expression
   61                       | logical_OR_expression N P42 M expression N P43 M conditional_expression

   62 assignment_expression: conditional_expression
   63                      | unary_expression assignment_operator assignment_expression

   64 assignment_operator: P5
   65                    | P6
   66                    | P7
   67                    | P8
   68                    | P9
   69                    | P10
   70                    | P11
   71                    | P12
   72                    | P13
   73                    | P14
   74                    | P15

   75 expression: assignment_expression
   76           | expression P46 assignment_expression

   77 Constant_expression: conditional_expression

   78 Constant: Int_Constant
   79         | Floating_Const
   80         | Enumeration_Constant
   81         | Character_Constant

   82 declaration: declaration_specifiers init_declarator_list_opt P44
   83            | declaration_specifiers P44

   84 declaration_specifiers_opt: declaration_specifiers
   85                           | /* empty */

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   87                       | type_specifier declaration_specifiers_opt
   88                       | type_qualifier declaration_specifiers_opt
   89                       | function_specifier declaration_specifiers_opt

   90 init_declarator_list_opt: init_declarator_list

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list P46 init_declarator

   93 init_declarator: declarator
   94                | declarator P5 initializer

   95 storage_class_specifier: Extern
   96                        | Static
   97                        | Auto
   98                        | Register

   99 type_specifier: Void_
  100               | Char_
  101               | Short
  102               | Int_
  103               | Long
  104               | Float
  105               | Double_
  106               | Signed
  107               | Unsigned
  108               | Bool
  109               | Complex
  110               | Imaginary
  111               | Enum_specifier

  112 specifier_qualifier_list_opt: specifier_qualifier_list
  113                             | /* empty */

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  115                         | type_qualifier specifier_qualifier_list_opt

  116 identifier_opt: identifier
  117               | /* empty */

  118 Enum_specifier: Enum identifier_opt P26 Enumerator_list P27
  119               | Enum identifier_opt P26 Enumerator_list P46 P27
  120               | Enum identifier

  121 Enumerator_list: Enumerator
  122                | Enumerator_list P46 Enumerator

  123 Enumerator: Enumeration_Constant
  124           | Enumeration_Constant P5 Constant_expression

  125 type_qualifier: Const
  126               | Restrict
  127               | Volatile

  128 function_specifier: Inline

  129 pointer_opt: pointer
  130            | /* empty */

  131 pointer: P17 type_qualifier_list_opt
  132        | P17 type_qualifier_list_opt pointer

  133 declarator: pointer_opt direct_declarator

  134 type_qualifier_list_opt: type_qualifier_list
  135                        | /* empty */

  136 assignment_expression_opt: assignment_expression
  137                          | /* empty */

  138 direct_declarator: identifier
  139                  | direct_declarator P22 type_qualifier_list_opt assignment_expression_opt P23
  140                  | direct_declarator P24 parameter_type_list P25
  141                  | direct_declarator P24 P25
  142                  | P24 declarator P25
  143                  | direct_declarator P22 Static type_qualifier_list_opt assignment_expression P23
  144                  | direct_declarator P22 type_qualifier_list Static assignment_expression P23
  145                  | direct_declarator P22 type_qualifier_list_opt P17 P23

  146 type_qualifier_list: type_qualifier
  147                    | type_qualifier_list type_qualifier

  148 parameter_type_list: parameter_list
  149                    | parameter_list P46 P45

  150 parameter_list: parameter_declaration
  151               | parameter_list P46 parameter_declaration

  152 parameter_declaration: declaration_specifiers declarator
  153                      | declaration_specifiers

  154 type_name: specifier_qualifier_list

  155 initializer: assignment_expression
  156            | P26 initializer_list P27
  157            | P26 initializer_list P46 P27

  158 designation_opt: designation
  159                | /* empty */

  160 initializer_list: designation_opt initializer
  161                 | initializer_list P46 designation_opt initializer

  162 designation: designator_list P5

  163 designator_list: designator
  164                | designator_list designator

  165 designator: P22 Constant_expression P23
  166           | P28 identifier

  167 statement: labeled_statement
  168          | compound_statement
  169          | expression_statement
  170          | selection_statement
  171          | iteration_statement
  172          | jump_statement

  173 labeled_statement: identifier P43 statement
  174                  | Case Constant_expression P43 statement
  175                  | Default P43 statement

  176 block_item_list_opt: block_item_list
  177                    | /* empty */

  178 compound_statement: P26 block_item_list_opt P27

  179 block_item_list: block_item
  180                | block_item_list M block_item

  181 block_item: declaration
  182           | statement

  183 expression_opt: expression
  184               | /* empty */

  185 expression_statement: expression_opt P44

  186 selection_statement: If P24 expression P25 M statement
  187                    | If P24 expression P25 M statement N Else M statement
  188                    | Switch P24 expression P25 statement

  189 iteration_statement: While N M P24 expression P25 M statement
  190                    | Do M statement M While P24 expression P25 P44
  191                    | For P24 expression_opt P44 M N expression_opt P44 M expression_opt N P25 M statement
  192                    | For P24 declaration expression_opt P44 expression_opt P25 statement

  193 jump_statement: Goto identifier P44
  194               | Continue P44
  195               | Break P44
  196               | Return expression_opt P44

  197 translation_unit: External_declaration
  198                 | translation_unit External_declaration

  199 External_declaration: function_definition
  200                     | declaration

  201 function_definition: declaration_specifiers declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
error (256)
Auto (258) 97
Break (259) 195
Case (260) 174
Char_ (261) 100
Const (262) 125
Continue (263) 194
Default (264) 175
Do (265) 190
Double_ (266) 105
Else (267) 187
Enum (268) 118 119 120
Extern (269) 95
Float (270) 104
For (271) 191 192
Goto (272) 193
If (273) 186 187
Inline (274) 128
Int_ (275) 102
Long (276) 103
Register (277) 98
Restrict (278) 126
Return (279) 196
Short (280) 101
Signed (281) 106
Sizeof (282) 26 27
Static (283) 96 143 144
Struct (284)
Switch (285) 188
Typedef (286)
Union (287)
Unsigned (288) 107
Void_ (289) 99
Volatile (290) 127
While (291) 189 190
Bool (292) 108
Complex (293) 109
Imaginary (294) 110
identifier (295) 1 9 10 116 120 138 166 173 193
Int_Constant (296) 78
Floating_Const (297) 79
Enumeration_Constant (298) 80 123 124
Character_Constant (299) 81
string_literal (300) 3
P1 (301) 43
P2 (302) 44
P3 (303) 46
P4 (304) 47
P5 (305) 64 94 124 162
P6 (306) 65
P7 (307) 66
P8 (308) 67
P9 (309) 68
P10 (310) 69
P11 (311) 70
P12 (312) 71
P13 (313) 72
P14 (314) 73
P15 (315) 74
P16 (316) 20 49
P17 (317) 21 31 131 132 145
P18 (318) 22 35
P19 (319) 23 36
P20 (320) 24
P21 (321) 25
P22 (322) 6 139 143 144 145 165
P23 (323) 6 139 143 144 145 165
P24 (324) 4 7 8 13 14 27 29 140 141 142 186 187 188 189 190 191 192
P25 (325) 4 7 8 13 14 27 29 140 141 142 186 187 188 189 190 191 192
P26 (326) 13 14 118 119 156 157 178
P27 (327) 13 14 118 119 156 157 178
P28 (328) 9 166
P29 (329) 10
P30 (330) 11 18
P31 (331) 12 19
P32 (332) 32
P33 (333) 33
P34 (334) 38
P35 (335) 39
P36 (336) 41
P37 (337) 42
P38 (338) 51
P39 (339) 53
P40 (340) 57
P41 (341) 59
P42 (342) 61
P43 (343) 61 173 174 175
P44 (344) 82 83 185 190 191 192 193 194 195 196
P45 (345) 149
P46 (346) 14 16 76 92 119 122 149 151 157 161
P47 (347)


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
primary_expression (94)
    on left: 1 2 3 4, on right: 5
postfix_expression (95)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 6 7 8 9 10 11 12 17
argument_expression_list (96)
    on left: 15 16, on right: 7 16
unary_expression (97)
    on left: 17 18 19 20 21 22 23 24 25 26 27, on right: 18 19 26 28
    63
cast_expression (98)
    on left: 28 29, on right: 20 21 22 23 24 25 29 30 31 32 33
multiplicative_expression (99)
    on left: 30 31 32 33, on right: 31 32 33 34 35 36
additive_expression (100)
    on left: 34 35 36, on right: 35 36 37 38 39
shift_expression (101)
    on left: 37 38 39, on right: 38 39 40 41 42 43 44
relational_expression (102)
    on left: 40 41 42 43 44, on right: 41 42 43 44 45 46 47
equality_expression (103)
    on left: 45 46 47, on right: 46 47 48 49
AND_expression (104)
    on left: 48 49, on right: 49 50 51
exclusive_OR_expression (105)
    on left: 50 51, on right: 51 52 53
inclusive_OR_expression (106)
    on left: 52 53, on right: 53 56 57
M (107)
    on left: 54, on right: 21 51 57 59 61 180 186 187 189 190 191
N (108)
    on left: 55, on right: 61 187 189 191
logical_AND_expression (109)
    on left: 56 57, on right: 57 58 59
logical_OR_expression (110)
    on left: 58 59, on right: 59 60 61
conditional_expression (111)
    on left: 60 61, on right: 61 62 77
assignment_expression (112)
    on left: 62 63, on right: 15 16 63 75 76 136 143 144 155
assignment_operator (113)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 63
expression (114)
    on left: 75 76, on right: 4 6 61 76 183 186 187 188 189 190
Constant_expression (115)
    on left: 77, on right: 124 165 174
Constant (116)
    on left: 78 79 80 81, on right: 2
declaration (117)
    on left: 82 83, on right: 181 192 200
declaration_specifiers_opt (118)
    on left: 84 85, on right: 86 87 88 89
declaration_specifiers (119)
    on left: 86 87 88 89, on right: 82 83 84 152 153 201
init_declarator_list_opt (120)
    on left: 90, on right: 82
init_declarator_list (121)
    on left: 91 92, on right: 90 92
init_declarator (122)
    on left: 93 94, on right: 91 92
storage_class_specifier (123)
    on left: 95 96 97 98, on right: 86
type_specifier (124)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111, on right:
    87 114
specifier_qualifier_list_opt (125)
    on left: 112 113, on right: 114 115
specifier_qualifier_list (126)
    on left: 114 115, on right: 112 154
identifier_opt (127)
    on left: 116 117, on right: 118 119
Enum_specifier (128)
    on left: 118 119 120, on right: 111
Enumerator_list (129)
    on left: 121 122, on right: 118 119 122
Enumerator (130)
    on left: 123 124, on right: 121 122
type_qualifier (131)
    on left: 125 126 127, on right: 88 115 146 147
function_specifier (132)
    on left: 128, on right: 89
pointer_opt (133)
    on left: 129 130, on right: 133
pointer (134)
    on left: 131 132, on right: 129 132
declarator (135)
    on left: 133, on right: 93 94 142 152 201
type_qualifier_list_opt (136)
    on left: 134 135, on right: 131 132 139 143 145
assignment_expression_opt (137)
    on left: 136 137, on right: 139
direct_declarator (138)
    on left: 138 139 140 141 142 143 144 145, on right: 133 139 140
    141 143 144 145
type_qualifier_list (139)
    on left: 146 147, on right: 134 144 147
parameter_type_list (140)
    on left: 148 149, on right: 140
parameter_list (141)
    on left: 150 151, on right: 148 149 151
parameter_declaration (142)
    on left: 152 153, on right: 150 151
type_name (143)
    on left: 154, on right: 13 14 27 29
initializer (144)
    on left: 155 156 157, on right: 94 160 161
designation_opt (145)
    on left: 158 159, on right: 160 161
initializer_list (146)
    on left: 160 161, on right: 13 14 156 157 161
designation (147)
    on left: 162, on right: 158
designator_list (148)
    on left: 163 164, on right: 162 164
designator (149)
    on left: 165 166, on right: 163 164
statement (150)
    on left: 167 168 169 170 171 172, on right: 173 174 175 182 186
    187 188 189 190 191 192
labeled_statement (151)
    on left: 173 174 175, on right: 167
block_item_list_opt (152)
    on left: 176 177, on right: 178
compound_statement (153)
    on left: 178, on right: 168 201
block_item_list (154)
    on left: 179 180, on right: 176 180
block_item (155)
    on left: 181 182, on right: 179 180
expression_opt (156)
    on left: 183 184, on right: 185 191 192 196
expression_statement (157)
    on left: 185, on right: 169
selection_statement (158)
    on left: 186 187 188, on right: 170
iteration_statement (159)
    on left: 189 190 191 192, on right: 171
jump_statement (160)
    on left: 193 194 195 196, on right: 172
translation_unit (161)
    on left: 197 198, on right: 0 198
External_declaration (162)
    on left: 199 200, on right: 197 198
function_definition (163)
    on left: 201, on right: 199


State 0

    0 $accept: . translation_unit $end

    Auto       shift, and go to state 1
    Char_      shift, and go to state 2
    Const      shift, and go to state 3
    Double_    shift, and go to state 4
    Enum       shift, and go to state 5
    Extern     shift, and go to state 6
    Float      shift, and go to state 7
    Inline     shift, and go to state 8
    Int_       shift, and go to state 9
    Long       shift, and go to state 10
    Register   shift, and go to state 11
    Restrict   shift, and go to state 12
    Short      shift, and go to state 13
    Signed     shift, and go to state 14
    Static     shift, and go to state 15
    Unsigned   shift, and go to state 16
    Void_      shift, and go to state 17
    Volatile   shift, and go to state 18
    Bool       shift, and go to state 19
    Complex    shift, and go to state 20
    Imaginary  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    Enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    External_declaration     go to state 30
    function_definition      go to state 31


State 1

   97 storage_class_specifier: Auto .

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  100 type_specifier: Char_ .

    $default  reduce using rule 100 (type_specifier)


State 3

  125 type_qualifier: Const .

    $default  reduce using rule 125 (type_qualifier)


State 4

  105 type_specifier: Double_ .

    $default  reduce using rule 105 (type_specifier)


State 5

  118 Enum_specifier: Enum . identifier_opt P26 Enumerator_list P27
  119               | Enum . identifier_opt P26 Enumerator_list P46 P27
  120               | Enum . identifier

    identifier  shift, and go to state 32

    $default  reduce using rule 117 (identifier_opt)

    identifier_opt  go to state 33


State 6

   95 storage_class_specifier: Extern .

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  104 type_specifier: Float .

    $default  reduce using rule 104 (type_specifier)


State 8

  128 function_specifier: Inline .

    $default  reduce using rule 128 (function_specifier)


State 9

  102 type_specifier: Int_ .

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: Long .

    $default  reduce using rule 103 (type_specifier)


State 11

   98 storage_class_specifier: Register .

    $default  reduce using rule 98 (storage_class_specifier)


State 12

  126 type_qualifier: Restrict .

    $default  reduce using rule 126 (type_qualifier)


State 13

  101 type_specifier: Short .

    $default  reduce using rule 101 (type_specifier)


State 14

  106 type_specifier: Signed .

    $default  reduce using rule 106 (type_specifier)


State 15

   96 storage_class_specifier: Static .

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  107 type_specifier: Unsigned .

    $default  reduce using rule 107 (type_specifier)


State 17

   99 type_specifier: Void_ .

    $default  reduce using rule 99 (type_specifier)


State 18

  127 type_qualifier: Volatile .

    $default  reduce using rule 127 (type_qualifier)


State 19

  108 type_specifier: Bool .

    $default  reduce using rule 108 (type_specifier)


State 20

  109 type_specifier: Complex .

    $default  reduce using rule 109 (type_specifier)


State 21

  110 type_specifier: Imaginary .

    $default  reduce using rule 110 (type_specifier)


State 22

  200 External_declaration: declaration .

    $default  reduce using rule 200 (External_declaration)


State 23

   82 declaration: declaration_specifiers . init_declarator_list_opt P44
   83            | declaration_specifiers . P44
  201 function_definition: declaration_specifiers . declarator compound_statement

    P17  shift, and go to state 34
    P44  shift, and go to state 35

    $default  reduce using rule 130 (pointer_opt)

    init_declarator_list_opt  go to state 36
    init_declarator_list      go to state 37
    init_declarator           go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40
    declarator                go to state 41


State 24

   86 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    Auto       shift, and go to state 1
    Char_      shift, and go to state 2
    Const      shift, and go to state 3
    Double_    shift, and go to state 4
    Enum       shift, and go to state 5
    Extern     shift, and go to state 6
    Float      shift, and go to state 7
    Inline     shift, and go to state 8
    Int_       shift, and go to state 9
    Long       shift, and go to state 10
    Register   shift, and go to state 11
    Restrict   shift, and go to state 12
    Short      shift, and go to state 13
    Signed     shift, and go to state 14
    Static     shift, and go to state 15
    Unsigned   shift, and go to state 16
    Void_      shift, and go to state 17
    Volatile   shift, and go to state 18
    Bool       shift, and go to state 19
    Complex    shift, and go to state 20
    Imaginary  shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 42
    declaration_specifiers      go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    Enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   87 declaration_specifiers: type_specifier . declaration_specifiers_opt

    Auto       shift, and go to state 1
    Char_      shift, and go to state 2
    Const      shift, and go to state 3
    Double_    shift, and go to state 4
    Enum       shift, and go to state 5
    Extern     shift, and go to state 6
    Float      shift, and go to state 7
    Inline     shift, and go to state 8
    Int_       shift, and go to state 9
    Long       shift, and go to state 10
    Register   shift, and go to state 11
    Restrict   shift, and go to state 12
    Short      shift, and go to state 13
    Signed     shift, and go to state 14
    Static     shift, and go to state 15
    Unsigned   shift, and go to state 16
    Void_      shift, and go to state 17
    Volatile   shift, and go to state 18
    Bool       shift, and go to state 19
    Complex    shift, and go to state 20
    Imaginary  shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 44
    declaration_specifiers      go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    Enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  111 type_specifier: Enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 27

   88 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    Auto       shift, and go to state 1
    Char_      shift, and go to state 2
    Const      shift, and go to state 3
    Double_    shift, and go to state 4
    Enum       shift, and go to state 5
    Extern     shift, and go to state 6
    Float      shift, and go to state 7
    Inline     shift, and go to state 8
    Int_       shift, and go to state 9
    Long       shift, and go to state 10
    Register   shift, and go to state 11
    Restrict   shift, and go to state 12
    Short      shift, and go to state 13
    Signed     shift, and go to state 14
    Static     shift, and go to state 15
    Unsigned   shift, and go to state 16
    Void_      shift, and go to state 17
    Volatile   shift, and go to state 18
    Bool       shift, and go to state 19
    Complex    shift, and go to state 20
    Imaginary  shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 45
    declaration_specifiers      go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    Enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   89 declaration_specifiers: function_specifier . declaration_specifiers_opt

    Auto       shift, and go to state 1
    Char_      shift, and go to state 2
    Const      shift, and go to state 3
    Double_    shift, and go to state 4
    Enum       shift, and go to state 5
    Extern     shift, and go to state 6
    Float      shift, and go to state 7
    Inline     shift, and go to state 8
    Int_       shift, and go to state 9
    Long       shift, and go to state 10
    Register   shift, and go to state 11
    Restrict   shift, and go to state 12
    Short      shift, and go to state 13
    Signed     shift, and go to state 14
    Static     shift, and go to state 15
    Unsigned   shift, and go to state 16
    Void_      shift, and go to state 17
    Volatile   shift, and go to state 18
    Bool       shift, and go to state 19
    Complex    shift, and go to state 20
    Imaginary  shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 46
    declaration_specifiers      go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    Enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  198 translation_unit: translation_unit . External_declaration

    $end       shift, and go to state 47
    Auto       shift, and go to state 1
    Char_      shift, and go to state 2
    Const      shift, and go to state 3
    Double_    shift, and go to state 4
    Enum       shift, and go to state 5
    Extern     shift, and go to state 6
    Float      shift, and go to state 7
    Inline     shift, and go to state 8
    Int_       shift, and go to state 9
    Long       shift, and go to state 10
    Register   shift, and go to state 11
    Restrict   shift, and go to state 12
    Short      shift, and go to state 13
    Signed     shift, and go to state 14
    Static     shift, and go to state 15
    Unsigned   shift, and go to state 16
    Void_      shift, and go to state 17
    Volatile   shift, and go to state 18
    Bool       shift, and go to state 19
    Complex    shift, and go to state 20
    Imaginary  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    Enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    External_declaration     go to state 48
    function_definition      go to state 31


State 30

  197 translation_unit: External_declaration .

    $default  reduce using rule 197 (translation_unit)


State 31

  199 External_declaration: function_definition .

    $default  reduce using rule 199 (External_declaration)


State 32

  116 identifier_opt: identifier .
  120 Enum_specifier: Enum identifier .

    P26       reduce using rule 116 (identifier_opt)
    $default  reduce using rule 120 (Enum_specifier)


State 33

  118 Enum_specifier: Enum identifier_opt . P26 Enumerator_list P27
  119               | Enum identifier_opt . P26 Enumerator_list P46 P27

    P26  shift, and go to state 49


State 34

  131 pointer: P17 . type_qualifier_list_opt
  132        | P17 . type_qualifier_list_opt pointer

    Const     shift, and go to state 3
    Restrict  shift, and go to state 12
    Volatile  shift, and go to state 18

    $default  reduce using rule 135 (type_qualifier_list_opt)

    type_qualifier           go to state 50
    type_qualifier_list_opt  go to state 51
    type_qualifier_list      go to state 52


State 35

   83 declaration: declaration_specifiers P44 .

    $default  reduce using rule 83 (declaration)


State 36

   82 declaration: declaration_specifiers init_declarator_list_opt . P44

    P44  shift, and go to state 53


State 37

   90 init_declarator_list_opt: init_declarator_list .
   92 init_declarator_list: init_declarator_list . P46 init_declarator

    P46  shift, and go to state 54

    $default  reduce using rule 90 (init_declarator_list_opt)


State 38

   91 init_declarator_list: init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


State 39

  133 declarator: pointer_opt . direct_declarator

    identifier  shift, and go to state 55
    P24         shift, and go to state 56

    direct_declarator  go to state 57


State 40

  129 pointer_opt: pointer .

    $default  reduce using rule 129 (pointer_opt)


State 41

   93 init_declarator: declarator .
   94                | declarator . P5 initializer
  201 function_definition: declaration_specifiers declarator . compound_statement

    P5   shift, and go to state 58
    P26  shift, and go to state 59

    $default  reduce using rule 93 (init_declarator)

    compound_statement  go to state 60


State 42

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 86 (declaration_specifiers)


State 43

   84 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 84 (declaration_specifiers_opt)


State 44

   87 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 87 (declaration_specifiers)


State 45

   88 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 88 (declaration_specifiers)


State 46

   89 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 89 (declaration_specifiers)


State 47

    0 $accept: translation_unit $end .

    $default  accept


State 48

  198 translation_unit: translation_unit External_declaration .

    $default  reduce using rule 198 (translation_unit)


State 49

  118 Enum_specifier: Enum identifier_opt P26 . Enumerator_list P27
  119               | Enum identifier_opt P26 . Enumerator_list P46 P27

    Enumeration_Constant  shift, and go to state 61

    Enumerator_list  go to state 62
    Enumerator       go to state 63


State 50

  146 type_qualifier_list: type_qualifier .

    $default  reduce using rule 146 (type_qualifier_list)


State 51

  131 pointer: P17 type_qualifier_list_opt .
  132        | P17 type_qualifier_list_opt . pointer

    P17  shift, and go to state 34

    $default  reduce using rule 131 (pointer)

    pointer  go to state 64


State 52

  134 type_qualifier_list_opt: type_qualifier_list .
  147 type_qualifier_list: type_qualifier_list . type_qualifier

    Const     shift, and go to state 3
    Restrict  shift, and go to state 12
    Volatile  shift, and go to state 18

    $default  reduce using rule 134 (type_qualifier_list_opt)

    type_qualifier  go to state 65


State 53

   82 declaration: declaration_specifiers init_declarator_list_opt P44 .

    $default  reduce using rule 82 (declaration)


State 54

   92 init_declarator_list: init_declarator_list P46 . init_declarator

    P17  shift, and go to state 34

    $default  reduce using rule 130 (pointer_opt)

    init_declarator  go to state 66
    pointer_opt      go to state 39
    pointer          go to state 40
    declarator       go to state 67


State 55

  138 direct_declarator: identifier .

    $default  reduce using rule 138 (direct_declarator)


State 56

  142 direct_declarator: P24 . declarator P25

    P17  shift, and go to state 34

    $default  reduce using rule 130 (pointer_opt)

    pointer_opt  go to state 39
    pointer      go to state 40
    declarator   go to state 68


State 57

  133 declarator: pointer_opt direct_declarator .
  139 direct_declarator: direct_declarator . P22 type_qualifier_list_opt assignment_expression_opt P23
  140                  | direct_declarator . P24 parameter_type_list P25
  141                  | direct_declarator . P24 P25
  143                  | direct_declarator . P22 Static type_qualifier_list_opt assignment_expression P23
  144                  | direct_declarator . P22 type_qualifier_list Static assignment_expression P23
  145                  | direct_declarator . P22 type_qualifier_list_opt P17 P23

    P22  shift, and go to state 69
    P24  shift, and go to state 70

    $default  reduce using rule 133 (declarator)


State 58

   94 init_declarator: declarator P5 . initializer

    Sizeof                shift, and go to state 71
    identifier            shift, and go to state 72
    Int_Constant          shift, and go to state 73
    Floating_Const        shift, and go to state 74
    Enumeration_Constant  shift, and go to state 75
    Character_Constant    shift, and go to state 76
    string_literal        shift, and go to state 77
    P16                   shift, and go to state 78
    P17                   shift, and go to state 79
    P18                   shift, and go to state 80
    P19                   shift, and go to state 81
    P20                   shift, and go to state 82
    P21                   shift, and go to state 83
    P24                   shift, and go to state 84
    P26                   shift, and go to state 85
    P30                   shift, and go to state 86
    P31                   shift, and go to state 87

    primary_expression         go to state 88
    postfix_expression         go to state 89
    unary_expression           go to state 90
    cast_expression            go to state 91
    multiplicative_expression  go to state 92
    additive_expression        go to state 93
    shift_expression           go to state 94
    relational_expression      go to state 95
    equality_expression        go to state 96
    AND_expression             go to state 97
    exclusive_OR_expression    go to state 98
    inclusive_OR_expression    go to state 99
    logical_AND_expression     go to state 100
    logical_OR_expression      go to state 101
    conditional_expression     go to state 102
    assignment_expression      go to state 103
    Constant                   go to state 104
    initializer                go to state 105


State 59

  178 compound_statement: P26 . block_item_list_opt P27

    Auto                  shift, and go to state 1
    Break                 shift, and go to state 106
    Case                  shift, and go to state 107
    Char_                 shift, and go to state 2
    Const                 shift, and go to state 3
    Continue              shift, and go to state 108
    Default               shift, and go to state 109
    Do                    shift, and go to state 110
    Double_               shift, and go to state 4
    Enum                  shift, and go to state 5
    Extern                shift, and go to state 6
    Float                 shift, and go to state 7
    For                   shift, and go to state 111
    Goto                  shift, and go to state 112
    If                    shift, and go to state 113
    Inline                shift, and go to state 8
    Int_                  shift, and go to state 9
    Long                  shift, and go to state 10
    Register              shift, and go to state 11
    Restrict              shift, and go to state 12
    Return                shift, and go to state 114
    Short                 shift, and go to state 13
    Signed                shift, and go to state 14
    Sizeof                shift, and go to state 71
    Static                shift, and go to state 15
    Switch                shift, and go to state 115
    Unsigned              shift, and go to state 16
    Void_                 shift, and go to state 17
    Volatile              shift, and go to state 18
    While                 shift, and go to state 116
    Bool                  shift, and go to state 19
    Complex               shift, and go to state 20
    Imaginary             shift, and go to state 21
    identifier            shift, and go to state 117
    Int_Constant          shift, and go to state 73
    Floating_Const        shift, and go to state 74
    Enumeration_Constant  shift, and go to state 75
    Character_Constant    shift, and go to state 76
    string_literal        shift, and go to state 77
    P16                   shift, and go to state 78
    P17                   shift, and go to state 79
    P18                   shift, and go to state 80
    P19                   shift, and go to state 81
    P20                   shift, and go to state 82
    P21                   shift, and go to state 83
    P24                   shift, and go to state 84
    P26                   shift, and go to state 59
    P30                   shift, and go to state 86
    P31                   shift, and go to state 87

    P44       reduce using rule 184 (expression_opt)
    $default  reduce using rule 177 (block_item_list_opt)
